--- a/src/partials/to-top-button.html
+++ b/src/partials/to-top-button.html
@@ -1,7 +1,7 @@
 <a href="#header">
   <button class="to-top-button">
     <svg class="to-top-img">
-      <use href="../img/symbol-defs.svg#icon-strelka"></use>
+      <use href="./img/symbol-defs.svg#icon-strelka"></use>
     </svg>
   </button>
 </a>
