--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -45,7 +45,7 @@
             <option value="120">120 min</option>
           </select>
           <svg class="strelka-time" id="arrow-time">
-            <use href="../img/symbol-defs.svg#icon-strelka"></use>
+            <use href="./img/symbol-defs.svg#icon-strelka"></use>
           </svg>
         </label>
         <label class="filters-label-area" for="area"
@@ -54,7 +54,7 @@
             <option value="Select area">Region</option>
           </select>
           <svg class="strelka-spisok" id="arrow-time">
-            <use href="../img/symbol-defs.svg#icon-strelka"></use>
+            <use href="./img/symbol-defs.svg#icon-strelka"></use>
           </svg>
         </label>
       </div>
@@ -68,7 +68,7 @@
           <option value="Select ingedients">Product</option>
         </select>
         <svg class="strelka-spisok-ing" id="arrow-time">
-          <use href="../img/symbol-defs.svg#icon-strelka"></use>
+          <use href="./img/symbol-defs.svg#icon-strelka"></use>
         </svg>
       </label>
     </form>
