--- a/src/partials/modal-recipe.html
+++ b/src/partials/modal-recipe.html
@@ -11,7 +11,7 @@
         class="ab-video"
         width="295"
         height="295"
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+        src="#"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -94,7 +94,7 @@
     </p>
 
     <ul class="ab-buttons">
-      <li><button class="ab-add-to-favorite" >Add to favorite</button></li>
+      <li><button class="ab-add-to-favorite">Add to favorite</button></li>
       <li>
         <a href="#rating-modal"
           ><button class="ab-give-a-rating">Give a rating</button></a
